exports[`completed`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <li
      className="completed">
      <div
        className="view">
        <input
          checked={true}
          className="toggle"
          onChange={[Function onChange]}
          type="checkbox" />
        <label
          onDoubleClick={[Function bound handleDoubleClick]}>
          Hello Todo
        </label>
        <button
          className="destroy"
          onClick={[Function onClick]} />
      </div>
    </li>
  </div>
</div>
`;

exports[`not completed`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <li
      className="">
      <div
        className="view">
        <input
          checked={false}
          className="toggle"
          onChange={[Function onChange]}
          type="checkbox" />
        <label
          onDoubleClick={[Function bound handleDoubleClick]}>
          Hello Todo
        </label>
        <button
          className="destroy"
          onClick={[Function onClick]} />
      </div>
    </li>
  </div>
</div>
`;
